# sha

./: .gitignore  CMakeLists.txt  README.md  license.txt  sha.sln
gtest/: gmock-gtest-all.cc
sha/: sha-byteorder.c  sha-byteorder.h  sha-ulti.cpp  sha-ulti.h  sha.h  sha.vcxproj  sha256.c  sha256.h  sha384-512.c  sha384-512.h
test/: main.cpp  test-sha.cpp  test-sha256.cpp
